# CRBot

GitHub-Profile-Viewer/: app.py
GitHub-Profile-Viewer/templates/: index.html  profile.html
bot/: bot.py  package-lock.json  utils.py
bot/config/: gunicorn.conf.py
github-code-checker/: app.py  eslint.config.js  index.js  package-lock.json  package.json  pyproject.toml
github-code-checker/config/: gunicorn.conf.py
